<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Todos_los_profesores_y_estudiantes">

    <TextView
        android:id="@+id/todo_alumno_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/todos_los_alumnos" />

    <TextView
        android:id="@+id/todo_alumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/todo_profesor_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/todos_los_profesores" />

    <TextView
        android:id="@+id/todo_profesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <Button
        android:id="@+id/volver_todos_los_profesores_y_estudiantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/volver" />
</LinearLayout>