<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ad3_estudiantes_por_curso_filtro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/Asignatura"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buscar_asignatura_estudiantes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buscar" />
    </LinearLayout>

    <TextView
        android:id="@+id/res_asignatura_estudiantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <Button
        android:id="@+id/volver_asignatura_estudiantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/volver" />
</LinearLayout>