<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AD3B">

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/bienvenido_a_la_actividad_ad3b"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pregunta_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/desea_registrar_un_alumno_o_un_profesor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/espacio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/button_alumno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="Soy un alumno" />

    <Button
        android:id="@+id/button_profesor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="Soy un profesor" />

    <Button
        android:id="@+id/ad3b_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver" />
</LinearLayout>